Bring the config screens, command and sync back on 26.2
The config UI, ConfigHelper, the config command and its argument, the
serverbound config packet, ConfirmationScreen and Ponder's own config
were all excluded from the build. Common now compiles against FML's
loader for ModConfig, and everything is back in.

Rendering, ported to the extraction model:
- Stencil elements drew their gradient straight over their mask, since
  GL stencil calls made during extraction mask nothing. StencilMask
  captures both drawings and re-emits the mask recoloured from the
  element; text is coloured per character.
- The config list added entries through children(), read-only in 26.2,
  and skipped vanilla's list texture and separators.
- ConfirmationScreen opens as a NeoForge screen layer instead of
  swapping itself in and redrawing its source.
- The spinning shadow behind config screens is the block blitted with
  a translucent black tint.
- Gradient rects take the scissor, and box elements report the borders
  they draw, so 26.2's layering puts overlapping boxes in order. The
  enum entry draws its value last, as 1.21.1's z of 200 did.

Also ports upstream's deep fuzzy search (#84) and string values (#77),
fixes the reset button's y and the scroll restored on resize, reads the
number range bounds through Range's getters, and lets Ponder feed its
placement indicator settings to catnip. Ponder's editing mode was
stubbed on for everyone; it follows the config again.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>